tests/ui/invalid_need_module_arg_position.stderr
error: expected &PyModule or Py<PyModule> as first argument with `pass_module`
 --> tests/ui/invalid_need_module_arg_position.rs:6:21
  |
6 |     fn fail(string: &str, module: &PyModule) -> PyResult<&str> {
  |                     ^
